# server/src/interfaces/http/swagger/swagger.json
@@ -35,6 +35,10 @@
       "description": "Everything about product in the store"
     },
     {
+      "name": "cart",
+      "description": "Access to user's cart"
+    },
+    {
       "name": "store",
       "description": "Access to user's orders"
     },
@@ -555,7 +559,7 @@
     "/store/cart": {
       "post": {
         "tags": [
-          "store"
+          "cart"
         ],
         "summary": "Add item to cart with default quantity as 1",
         "description": "",
@@ -588,7 +592,7 @@
       },
       "get": {
         "tags": [
-          "store"
+          "cart"
         ],
         "summary": "Get items from cart",
         "description": "",
@@ -612,10 +616,10 @@
         }
       }
     },
-    "/store/cart/:itemId": {
+    "/store/cart/:productId": {
       "put": {
         "tags": [
-          "store"
+          "cart"
         ],
         "summary": "Update item to cart with quantity",
         "description": "",
@@ -631,6 +635,39 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/CartItemQuantity"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Cart"
+            }
+          },
+          "400": {
+            "description": "Invalid Cart"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "cart"
+        ],
+        "summary": "Delete product from cart",
+        "description": "",
+        "operationId": "removeCartItem",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Update product in the cart",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/RemoveCartItem"
             }
           }
         ],
@@ -1104,6 +1141,17 @@
       "type": "object",
       "properties": {
         "quantity": {
+          "type": "integer"
+        },
+        "productId": {
+          "type": "integer"
+        }
+      }
+    },
+    "RemoveCartItem": {
+      "type": "object",
+      "properties": {
+        "productId": {
           "type": "integer"
         }
       }
